# virt-backup

./: .coveragerc  .gitignore  .travis.yml  LICENSE.mkd  README.mkd  pyproject.toml  pytest.ini  setup.cfg  setup.py  snaptest.xml  test.py  tox.ini  virt-backup
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-black.yml  python-package.yml
docs/: Makefile  backup.rst  clean.rst  conf.py  config.rst  data_map.rst  index.rst  make.bat  quickstart.rst
example/: config.yml  virt-backup-clean.service
tests/: conftest.py  test_compat_layers_config.py  test_compat_layers_definition.py  test_compat_layers_pending_info.py  test_complete_backup.py  test_complete_group.py  test_config.py  test_domain.py  test_group.py  test_main.py  test_packagers.py  test_pending_backup.py  test_snapshot.py  test_unsupported.py
tests/helper/: datetime.py  testdomain.xml  virt_backup.py
tests/testconfig/: config.yml
virt_backup/: __init__.py  __main__.py  config.py  domain.py  domains.py  exceptions.py  group.py  tools.py  virt_backup.py
virt_backup/backups/: __init__.py  complete.py  packager.py  pending.py  snapshot.py
virt_backup/backups/packagers/: __init__.py  directory.py  tar.py  unsupported.py  zstd.py
virt_backup/compat_layers/: __init__.py  config.py  definition.py  pending_info.py
virt_backup/groups/: __init__.py  complete.py  pattern.py  pending.py
virt_backup/tests/: conftest.py  test_backup_group.py  test_config.py  test_domain.py  test_dombackup.py  test_group.py  test_virt_backup.py  testdomain.xml
virt_backup/tests/helper/: datetime.py  (+1 more)
(+3 files in other folders)
